Fixed the nav bar alignment at 900px media query
Removed padding, and applied to padding top only.

--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ footer {
     .big__nav .menu {
         display: flex;
         justify-content: right;
-        padding: 1rem;
+        padding-top: 1rem;
     }
 
     .section__break {
